force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__IsCapacityBased__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsCapacityBased__c</fullName>
    <label>Is Capacity Based</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsCapacityBased</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>