force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__IsOptimizationCapable__c.field-meta.xml
<CustomField>
    <fullName>ssot__IsOptimizationCapable__c</fullName>
    <label>Is Optimization Capable</label>
    <length>5</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>IsOptimizationCapable</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>