force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__LastKnownLocationDateTime__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastKnownLocationDateTime__c</fullName>
    <label>Last Known Location Date</label>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastKnownLocationDateTime</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>DateTime</type>
</CustomField>