force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__LastKnownLocationId__c.field-meta.xml
<CustomField>
    <fullName>ssot__LastKnownLocationId__c</fullName>
    <label>Last Known Location</label>
    <length>15</length>
    <mktDataModelFieldAttributes>
        <definitionCreationType>Standard</definitionCreationType>
        <isDynamicLookup>false</isDynamicLookup>
        <refAttrDeveloperName>LastKnownLocationId</refAttrDeveloperName>
        <usageTag>None</usageTag>
    </mktDataModelFieldAttributes>
    <type>Text</type>
</CustomField>