force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__rel_1705061033133_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061033133_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkResource_LastKnownLocationId_map_rel</label>
    <referenceTo>ssot__Location__dlm</referenceTo>
    <relationshipLabel>WorkResource_LastKnownLocationId_map_rel</relationshipLabel>
    <relationshipName>rel_1705061033133_end</relationshipName>
    <type>Lookup</type>
</CustomField>