force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__rel_1705061034689_end__c.field-meta.xml
<CustomField>
    <fullName>ssot__rel_1705061034689_end__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkResource_OwnerId_map_UserGroup_I_rel</label>
    <referenceTo>ssot__UserGroup__dlm</referenceTo>
    <relationshipLabel>WorkResource_OwnerId_map_UserGroup_I_rel</relationshipLabel>
    <relationshipName>rel_1705061034689_end</relationshipName>
    <type>Lookup</type>
</CustomField>