force-app/main/default/objects/ssot__WorkResource__dlm/fields/ssot__WorkResource_CreatedById_map_User_Id_N_1__c.field-meta.xml
<CustomField>
    <fullName>ssot__WorkResource_CreatedById_map_User_Id_N_1__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>WorkResource_CreatedById_map_User_Id_N_1</label>
    <referenceTo>ssot__User__dlm</referenceTo>
    <relationshipLabel>WorkResource_CreatedById_map_User_Id_N_1</relationshipLabel>
    <relationshipName>WorkResource_CreatedById_map_User_Id_N_1</relationshipName>
    <type>Lookup</type>
</CustomField>